workshops/eks/cloudformation/hyperpod-eks-full-stack-v2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description:  This template deploys a VPC, with three public and private subnets spread
  across three Availability Zones. It deploys an internet gateway, with a default
  route on the public subnets. It deploys a NAT gateway in each AZ,
  and default routes for them in the private subnets. This template also deploys an EKS cluster, 
  an IAM execution role for SageMaker, and an S3 bucket for storing lifecycle scripts. 

Metadata: 
  AWS::CloudFormation::Interface: 
    ParameterGroups: 
      - 
        Label: 
          default: "Set the Stack Deployment Mode"
        Parameters: 
          - CreateEKSCluster
          - CreateSubnet
      - 
        Label: 
          default: "Common Parameters (for Full and Integrative Deployment Modes)"
        Parameters:
          - AvailabilityZoneId
          - PrivateSubnet1CIDR
          - ResourceNamePrefix
          - CreateHyperPodCluster
          - InstallHelm
      - 
        Label: 
          default: "Full Deployment Mode Parameters"
        Parameters: 
          - VpcCIDR
          - PublicSubnet1CIDR
          - PublicSubnet2CIDR
          - EKSPrivateSubnet1CIDR
          - EKSPrivateSubnet2CIDR
          - KubernetesVersion
      - 
        Label: 
          default: "Integrative Deployment Mode Parameters"
        Parameters: 
          - VpcId
          - NatGatewayId
          - SecurityGroupId
          - EKSClusterName
      - 
        Label: 
          default: "(Optional) HyperPod Helm Chart Parameters (if CreateHyperPodCluster == true or InstallHelm == true)"
        Parameters: 
          - HelmRepoUrl
          - HelmRepoPath
          - HelmRelease
          - LayerS3Bucket
          - LayerS3Key
          - FunctionS3Bucket
          - FunctionS3Key
      - 
        Label: 
          default: "(Optional) Accelerated Instance Group Parameters (if CreateHyperPodCluster == true)"
        Parameters: 
          - AcceleratedInstanceGroupName
          - AcceleratedInstanceType
          - AcceleratedInstanceCount
          - AcceleratedEBSVolumeSize
          - AcceleratedThreadsPerCore
          - AcceleratedOnStartDeepHealthChecks
          - AcceleratedLifeCycleConfigOnCreate
      - 
        Label: 
          default: "(Optional) General Purpose Instance Group Parameters (if CreateHyperPodCluster == true)"
        Parameters: 
          - GeneralPurposeInstanceGroupName
          - GeneralPurposeInstanceType
          - GeneralPurposeInstanceCount
          - GeneralPurposeEBSVolumeSize
          - GeneralPurposeThreadsPerCore
          - GeneralPurposeLifeCycleConfigOnCreate

    ParameterLabels: 
      CreateEKSCluster: 
        default: "[Full Deployment Mode] CreateEKSCluster: Do you need to create a new VPC and EKS cluster?"
      CreateSubnet:
        default: "[Integrative Deployment Mode] CreateSubnet: Do you need a new private /16 subnet for an existing VPC and EKS cluster?"
     
Parameters:

  ResourceNamePrefix:
    Description: 'Prefix to be used for all resources created by this template'
    Type: String
    Default: 'hyperpod-eks'
  
### ---------------- Condition Params ----------------###

  CreateEKSCluster:
     Description: 'Boolean to enable or disable the creation of VPC and EKS Cluster resources'
     Type: String
     AllowedValues: ['true', 'false']
     Default: 'true'

  CreateSubnet:
     Description: 'Boolean to enable or disable the creation of a /16 private subnet. Note, this parameter is only evaluated when the CreateEKSCluster parameter is set to false'
     Type: String
     AllowedValues: ['true', 'false']
     Default: 'false'

  CreateHyperPodCluster: 
    Description: 'Boolean to enable or disable the creation of a HyperPod cluster'
    Type: String
    AllowedValues: ['true', 'false']
    Default: 'false'

  InstallHelm:
    Description: 'Boolean to enable or disable the installation of the HyperPod Helm chart. Note, this parameter is only evaluated when the CreateHyperPodCluster parameter is set to false'
    Type: String
    AllowedValues: ['true', 'false']
    Default: 'false'

### ---------------- VPC Params ----------------###

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.192.0.0/16

  SecurityGroupId:
    Description: (OPTIONAL) If you are using an existing EKS Cluster, please specify the Id of your cluster security group (CreateEKSCluster=false, CreateSubnet=true). 
    Type: String
    Default: sg-1234567890abcdef0

  NatGatewayId:
    Description: (OPTIONAL) If you are using an existing EKS Cluster, please specify the Id of a NAT Gateway to route enternet bound traffic to (CreateEKSCluster=false, CreateSubnet=true). 
    Type: String
    Default: nat-1234567890abcdef0

  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 10.192.10.0/24

  PublicSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 10.192.11.0/24
  
### ---------------- Private Subnet Params ----------------###

  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    Default: 10.1.0.0/16

  AvailabilityZoneId: 
    Description: Please specify the Availability Zone Id you wish to deploy HyperPod ENIs into. Note, this parameter is not evaluated if you are using your own EKS Cluster and your own private subnet (CreateEKSCluster=false, CreateSubnet=false).
    Type: String
    Default: usw2-az2
    AllowedPattern: ^[a-z]{3,4}[0-9]-az[0-9]$
    ConstraintDescription: The Availability Zone Id must match the expression ^[a-z]{3,4}[0-9]-az[0-9]$. For example, use1-az4, usw2-az2, or apse1-az2. 

  VpcId: 
    Description: (OPTIONAL) If you are using an existing EKS Cluster, please specify the Id of your VPC (CreateEKSCluster=false, CreateSubnet=true). 
    Type: String
    Default: vpc-1234567890abcdef0

### ---------------- EKS Params ----------------###
  KubernetesVersion:
    Description: Kubernetes version to use for EKS cluster
    Type: String
    Default: '1.30'

  EKSClusterName: 
    Description: (OPTIONAL) If you are using an existing EKS Cluster and wish to install the HyperPod Helm chart and / or Create the HyperPod cluster, please specify the cluster name (CreateEKSCluster=false, CreateSubnet=true).
    Type: String
    Default: hyperpod-eks-cluster
  

  EKSPrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the EKS private subnet in the first Availability Zone. EKS will use this subnet to deploy cross-account ENIs.
    Type: String
    Default: 10.192.7.0/28

  EKSPrivateSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the EKS private subnet in the second Availability Zone. EKS will use this subnet to deploy cross-account ENIs.
    Type: String
    Default: 10.192.8.0/28

### ---------------- HyperPod Params ----------------###
  HyperPodClusterName: 
    Description: Name of SageMaker HyperPod Cluster
    Type: String
    Default: ml-cluster

  NodeRecovery: 
    Description: Specifies whether to enable or disable the automatic node recovery feature (Automatic or None)
    Type: String
    Default: Automatic
    AllowedValues: 
      - Automatic
      - None

  ### ----------------  Accelerated Instance Group 1 Params----------------###
  AcceleratedInstanceGroupName: 
    Description: The name of the accelerated instance group for the HyperPod cluster.
    Type: String
    Default: accelerated-worker-group-1

  AcceleratedInstanceType:
    Description: The instance type of the accelerated instance group for the HyperPod cluster.
    Type: String
    Default: ml.g5.xlarge

  AcceleratedInstanceCount: 
    Description: The number of instances in the accelerated instance group for the HyperPod cluster.
    Type: Number
    Default: 1

  AcceleratedEBSVolumeSize: 
    Description: The size in gigabytes (GB) of the additional EBS volume to be attached to the instances in the accelerated instance group for the HyperPod cluster.
    Type: Number
    Default: 500

  AcceleratedThreadsPerCore: 
    Description: The number of threads per CPU core in the accelerated instance group for the HyperPod cluster.
    Type: Number
    AllowedValues: 
      - 1 
      - 2
    Default: 1

  AcceleratedOnStartDeepHealthChecks:
    Description: A flag indicating whether deep health checks should be performed when the HyperPod cluster accelerated instance group is created or updated (InstanceStress and / or InstanceConnectivity). 
    Type: CommaDelimitedList
    Default: InstanceStress, InstanceConnectivity
    AllowedValues: 
      - InstanceStress
      - InstanceConnectivity
      - InstanceStress, InstanceConnectivity

  AcceleratedLifeCycleConfigOnCreate: 
    Description: The file name of lifecycle script for the accelerated instance group. This script runs during cluster creation.
    Type: String
    Default: on_create.sh

  ### ----------------  General Purpose Instance Group 2 Params ----------------###
  GeneralPurposeInstanceGroupName: 
    Description: The name of the general purpose instance group for the HyperPod cluster.
    Type: String
    Default: general-purpose-worker-group-2

  GeneralPurposeInstanceType: 
    Description: The instance type of the general purpose instance group for the HyperPod cluster.
    Type: String
    Default: ml.m5.2xlarge

  GeneralPurposeInstanceCount:
    Description: The number of instances in the general purpose instance group for the HyperPod cluster.
    Type: Number
    Default: 1

  GeneralPurposeEBSVolumeSize: 
    Description: The size in gigabytes (GB) of the additional EBS volume to be attached to the instances in the general purpose instance group for the HyperPod cluster.
    Type: Number
    Default: 500

  GeneralPurposeThreadsPerCore:
    Description: The number of threads per CPU core in the general purpose instance group for the HyperPod cluster.
    Type: Number 
    AllowedValues: 
      - 1 
      - 2
    Default: 1

  GeneralPurposeLifeCycleConfigOnCreate: 
    Description: The file name of lifecycle script for the general purpose instance group. This script runs during cluster creation.
    Type: String
    Default: on_create.sh

### ---------------- Helm Installer Params ----------------###
  HelmRepoUrl:
    Type: String
    Default: https://github.com/aws/sagemaker-hyperpod-cli.git

  HelmRepoPath:
    Type: String
    Default: helm_chart/HyperPodHelmChart

  HelmRelease: 
    Type: String
    Default: hyperpod-dependencies

  LayerS3Bucket: 
    Type: String
    Default: ws-assets-us-east-1/2433d39e-ccfe-4c00-9d3d-9917b729258e

  LayerS3Key: 
    Type: String
    Default: lambda-layer.zip

  FunctionS3Bucket:
    Type: String
    Default: ws-assets-us-east-1/2433d39e-ccfe-4c00-9d3d-9917b729258e

  FunctionS3Key: 
    Type: String
    Default: function.zip

### ---------------- Conditions ----------------###

Conditions:
    CreateEKSCluster: !Equals
      - !Ref CreateEKSCluster
      - 'true'

    CreateSubnet: !And 
      - !Not [!Condition CreateEKSCluster] 
      - !Equals [!Ref CreateSubnet, 'true'] 

    EKSOrSubnet: !Or
      - !Condition CreateEKSCluster
      - !Condition CreateSubnet

    CreateHyperPodCluster: !And
      - !Condition EKSOrSubnet
      - !Equals [!Ref CreateHyperPodCluster, 'true']

    InstallHelm: !Or
      - !Condition CreateHyperPodCluster
      - !And [!Condition EKSOrSubnet,!Equals [!Ref InstallHelm, 'true']]

Resources:
### ---------------- VPC Resources ----------------###
  VPC:
    Type: AWS::EC2::VPC
    Condition: CreateEKSCluster
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub '${ResourceNamePrefix}-vpc'

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Condition: CreateEKSCluster
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ResourceNamePrefix}-igw

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Condition: CreateEKSCluster
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Condition: CreateEKSCluster
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${ResourceNamePrefix} Public Subnet (AZ1)

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Condition: CreateEKSCluster
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${ResourceNamePrefix} Public Subnet (AZ2)

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    Condition: CreateEKSCluster
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    Condition: CreateEKSCluster
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Condition: CreateEKSCluster
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Condition: CreateEKSCluster
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Condition: CreateEKSCluster
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ResourceNamePrefix} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    Condition: CreateEKSCluster
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateEKSCluster
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateEKSCluster
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2


### ---------------- Used for HyperPod Instance Group Placement ----------------### 

  AdditionalCidrBlock1:
    Type: AWS::EC2::VPCCidrBlock
    Condition: EKSOrSubnet
    Properties:
      VpcId: !If
        - CreateEKSCluster
        - !Ref VPC
        - !Ref VpcId
      CidrBlock: !Ref PrivateSubnet1CIDR
      AmazonProvidedIpv6CidrBlock: false

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Condition: EKSOrSubnet
    Properties:
      VpcId: !If
        - CreateEKSCluster
        - !Ref VPC
        - !Ref VpcId
      AvailabilityZoneId: !Ref AvailabilityZoneId # select a specific AZ for capacity
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ResourceNamePrefix} Private Subnet 1
    DependsOn: 
        - AdditionalCidrBlock1
  
  ### ---------------- Private Route Table ----------------###

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Condition: EKSOrSubnet
    Properties:
      VpcId: !If 
        - CreateEKSCluster
        - !Ref VPC
        - !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${ResourceNamePrefix} Private Routes (AZ1)

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Condition: EKSOrSubnet
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !If
        - CreateEKSCluster
        - !Ref NatGateway1
        - !Ref NatGatewayId

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: EKSOrSubnet
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

### ---------------- Security Group Resources ----------------###

  NoIngressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Condition: EKSOrSubnet
    Properties:
      GroupName: !Sub '${ResourceNamePrefix}-no-ingress-sg'
      GroupDescription: "Security group with no ingress rule"
      VpcId: !If 
        - CreateEKSCluster
        - !Ref VPC
        - !Ref VpcId

  IntraSGCommunicationRule:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: EKSOrSubnet
    Properties:
      Description: "Allow traffic within the security group"
      GroupId: !Ref NoIngressSecurityGroup
      IpProtocol: -1
      SourceSecurityGroupId: !Ref NoIngressSecurityGroup

  IntraSGCommunicationRuleEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Condition: EKSOrSubnet
    Properties:
      Description: "Allow traffic within the security group"
      GroupId: !Ref NoIngressSecurityGroup
      IpProtocol: -1
      DestinationSecurityGroupId: !Ref NoIngressSecurityGroup

  InternetCommunicationRuleEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Condition: EKSOrSubnet
    Properties:
      Description: "Allow traffic to internet"
      GroupId: !Ref NoIngressSecurityGroup
      CidrIp: 0.0.0.0/0
      IpProtocol: -1

  FSxForLustreRule1:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: EKSOrSubnet
    Properties:
      Description: "Allows Lustre traffic between FSx for Lustre file servers and Lustre clients"
      GroupId: !Ref NoIngressSecurityGroup
      IpProtocol: tcp
      FromPort: 988
      ToPort: 988
      SourceSecurityGroupId: !Ref NoIngressSecurityGroup

  FSxForLustreRule2:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: EKSOrSubnet
    Properties:
      Description: "Allows Lustre traffic between FSx for Lustre file servers and Lustre clients"
      GroupId: !Ref NoIngressSecurityGroup
      IpProtocol: tcp
      FromPort: 1018
      ToPort: 1023
      SourceSecurityGroupId: !Ref NoIngressSecurityGroup

  CrossSGRuleIngress: 
    Type: AWS::EC2::SecurityGroupIngress
    Condition: CreateSubnet
    Properties:
      Description: "Allow traffic across security groups"
      GroupId: !Ref NoIngressSecurityGroup
      IpProtocol: -1
      SourceSecurityGroupId: !Ref SecurityGroupId

  CrossSGRuleEgress: 
    Type: AWS::EC2::SecurityGroupEgress
    Condition: CreateSubnet
    Properties:
      Description: "Allow traffic across security groups"
      GroupId: !Ref NoIngressSecurityGroup
      IpProtocol: -1
      DestinationSecurityGroupId: !Ref SecurityGroupId

  CrossSGRuleIngress2: 
    Type: AWS::EC2::SecurityGroupIngress
    Condition: CreateSubnet
    Properties:
      Description: "Allow traffic across security groups"
      GroupId: !Ref SecurityGroupId
      IpProtocol: -1
      SourceSecurityGroupId: !Ref NoIngressSecurityGroup

  CrossSGRuleEgress2: 
    Type: AWS::EC2::SecurityGroupEgress
    Condition: CreateSubnet
    Properties:
      Description: "Allow traffic across security groups"
      GroupId: !Ref SecurityGroupId
      IpProtocol: -1
      DestinationSecurityGroupId: !Ref NoIngressSecurityGroup

### ---------------- EKS Cluster Resources ----------------###

  EKSPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Condition: CreateEKSCluster
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref EKSPrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ResourceNamePrefix} EKS Cluster Private Subnet 1
  
  EKSPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Condition: CreateEKSCluster
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref EKSPrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ResourceNamePrefix} EKS Cluster Private Subnet 2

  ClusterRole:
    Type: 'AWS::IAM::Role'
    Condition: CreateEKSCluster
    Properties:
      RoleName: !Sub '${ResourceNamePrefix}-cluster-role-${AWS::Region}'
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - eks.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"

  EKSCluster:
    Type: 'AWS::EKS::Cluster'
    Condition: CreateEKSCluster
    Properties:
      Name: !Sub '${ResourceNamePrefix}-cluster'
      Version: !Ref KubernetesVersion
      RoleArn: !GetAtt ClusterRole.Arn
      AccessConfig:
        AuthenticationMode: API_AND_CONFIG_MAP
      Logging:
        ClusterLogging:
          EnabledTypes:
            - Type: api
            - Type: audit
            - Type: authenticator
            - Type: controllerManager
            - Type: scheduler
      ResourcesVpcConfig:
        SubnetIds:
           - !Ref EKSPrivateSubnet1
           - !Ref EKSPrivateSubnet2
        SecurityGroupIds: 
          - !Ref NoIngressSecurityGroup

  VpcCNIAddOn:
    Type: 'AWS::EKS::Addon'
    Condition: CreateEKSCluster
    Properties:
      AddonName: vpc-cni
      ClusterName: !Ref EKSCluster
      ResolveConflicts: OVERWRITE

  KubeProxyAddOn:
    Type: 'AWS::EKS::Addon'
    Condition: CreateEKSCluster
    Properties:
      AddonName: kube-proxy
      ClusterName: !Ref EKSCluster
      ResolveConflicts: OVERWRITE

  CoreDNSAddOn:
    Type: 'AWS::EKS::Addon'
    Condition: CreateEKSCluster
    Properties:
      AddonName: coredns
      ClusterName: !Ref EKSCluster
      ResolveConflicts: OVERWRITE

  PodIdentityAddOn:
    Type: 'AWS::EKS::Addon'
    Condition: CreateEKSCluster
    Properties:
      AddonName: eks-pod-identity-agent
      ClusterName: !Ref EKSCluster
      ResolveConflicts: OVERWRITE

### ---------------- SageMaker Execution and Service Roles ----------------###
  ExecutionRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - sagemaker.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AmazonSageMakerClusterInstanceRolePolicy'
      Policies:
        - PolicyName: !Sub '${ResourceNamePrefix}-ExecutionRolePolicy-${AWS::Region}'
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 'ec2:AssignPrivateIpAddresses'
                  - 'ec2:CreateNetworkInterface'
                  - 'ec2:CreateNetworkInterfacePermission'
                  - 'ec2:DeleteNetworkInterface'
                  - 'ec2:DeleteNetworkInterfacePermission'
                  - 'ec2:DescribeNetworkInterfaces'
                  - 'ec2:DescribeVpcs'
                  - 'ec2:DescribeDhcpOptions'
                  - 'ec2:DescribeSubnets'
                  - 'ec2:DescribeSecurityGroups'
                  - 'ec2:DetachNetworkInterface'
                  - 'ec2:ModifyNetworkInterfaceAttribute'
                  - 'ec2:UnassignPrivateIpAddresses'
                  - 'ecr:BatchGetImage'
                  - 'ecr:GetAuthorizationToken'
                  - 'ecr:GetDownloadUrlForLayer'
                  - 'eks-auth:AssumeRoleForPodIdentity'
                Resource: '*'
              - Effect: Allow
                Action: 
                  - 'ec2:CreateTags'
                Resource: 'arn:aws:ec2:*:*:network-interface/*'
              - Effect: Allow
                Action: 
                  - 's3:ListBucket'
                  - 's3:GetObject'
                Resource: 
                  - !GetAtt Bucket.Arn
                  - !Sub '${Bucket.Arn}/*'
      RoleName: !Sub '${ResourceNamePrefix}-ExecutionRole-${AWS::Region}'

### ---------------- Lifecycle Script S3 Bucket ----------------###

  Bucket:
    Type: 'AWS::S3::Bucket'
    Properties:
      BucketName: !Sub '${ResourceNamePrefix}-bucket-${AWS::AccountId}-${AWS::Region}'
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256

  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Condition: EKSOrSubnet
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
            - Effect: Allow
              Principal: '*'
              Action:
                - '*'
              Resource:
                - '*'
      RouteTableIds:
        - !Ref PrivateRouteTable
      ServiceName: !Join
        - ''
        - - com.amazonaws.
          - !Ref AWS::Region
          - .s3
      VpcId: !If 
        - CreateEKSCluster
        - !Ref VPC
        - !Ref VpcId

### ---------------- Custom Resource for Lifecycle Script  ----------------###

  S3CustomResourceRole:
    Type: AWS::IAM::Role
    DependsOn: Bucket
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: S3Access
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action: 
                 - s3:PutObject
                 - s3:DeleteObject
                Resource: !Sub ${Bucket.Arn}/*

  S3CustomResourceFunction: 
    Type: AWS::Lambda::Function
    Properties: 
      FunctionName: lifecycle-script-loader
      Environment: 
        Variables:
          BUCKET_NAME: !Ref Bucket
      Handler: index.lambda_handler
      Role: !GetAtt S3CustomResourceRole.Arn
      Runtime: python3.12
      Timeout: 600
      Code: 
        ZipFile: |
          import boto3
          import cfnresponse
          import os

          def lambda_handler(event, context):
            try:
              if event['RequestType'] in ['Create', 'Update']:
                s3 = boto3.client('s3')
                bucket = os.environ['BUCKET_NAME']
                try: 
                  # Create the on_create.sh content
                  script_content = """#!/bin/bash
                    # Add your script content here
                    set -ex

                    LOG_FILE="/var/log/provision/provisioning.log"
                    mkdir -p "/var/log/provision"
                    touch $LOG_FILE

                    # Function to log messages
                    logger() {
                      echo "$@" | tee -a $LOG_FILE
                    }

                    logger "[start] on_create.sh"
                    logger "no more steps to run"
                    logger "[stop] on_create.sh"
                  """
                  # Upload the script to S3
                  s3.put_object(
                    Bucket=bucket, 
                    Key='on_create.sh', 
                    Body=script_content, 
                    ContentType='text/x-sh'
                  )
                except s3.exceptions.NoSuchBucket:
                  # If bucket doesn't exist, return fail
                  cfnresponse.send(event, context, cfnresponse.FAILED, {
                    'Message': 'Bucket does not exist'
                  })
                
                cfnresponse.send(event, context, cfnresponse.SUCCESS, {
                  'Message': 'File uploaded successfully'
                })
              elif event['RequestType'] == 'Delete':
                s3 = boto3.client('s3')
                bucket = os.environ['BUCKET_NAME']
                try: 
                  # Delete the file from S3
                  s3.delete_object(
                    Bucket=bucket,
                    Key='on_create.sh'
                  )
                  cfnresponse.send(event, context, cfnresponse.SUCCESS, {
                    'Message': 'File deleted successfully'
                  })
                except s3.exceptions.NoSuchKey:
                  # If file doesn't exist, still return success
                  cfnresponse.send(event, context, cfnresponse.SUCCESS, {
                    'Message': 'File does not exist'
                  })
                except s3.exceptions.NoSuchBucket:
                  # If bucket is already deleted, still return success
                  cfnresponse.send(event, context, cfnresponse.SUCCESS, {
                    'Message': 'Bucket does not exist'
                  })
            except Exception as e:
              print(e)
              cfnresponse.send(event, context, cfnresponse.FAILED, {
                'Error': str(e)
              })

  S3CustomResource: 
    Type: AWS::CloudFormation::CustomResource
    Properties: 
      ServiceToken: !GetAtt S3CustomResourceFunction.Arn


### ---------------- Custom Resource for Helm Chart Injection ----------------###
# Lambda Function Role
  HelmCustomResourceRole:
    Type: AWS::IAM::Role
    Condition: InstallHelm
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: EKSClusterAccess
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - eks:DescribeCluster
                Resource: !If
                  - CreateEKSCluster
                  - !GetAtt EKSCluster.Arn
                  - !Sub 'arn:aws:eks:${AWS::Region}:${AWS::AccountId}:cluster/${EKSClusterName}'

# Access Entry
  HelmCustomResourceAccessEntry:
    Type: AWS::EKS::AccessEntry
    Condition: InstallHelm
    Properties:
      ClusterName: !If 
        - CreateEKSCluster
        - !Ref EKSCluster
        - !Ref EKSClusterName
      PrincipalArn: !GetAtt HelmCustomResourceRole.Arn
      AccessPolicies: 
        - PolicyArn: 'arn:aws:eks::aws:cluster-access-policy/AmazonEKSClusterAdminPolicy'
          AccessScope:
            Type: 'cluster'

# Lambda Layer
  HelmCustomResourceLayer:
    Type: AWS::Lambda::LayerVersion
    Condition: InstallHelm
    Properties:
      LayerName: helm-chart-installer-lambda-layer
      Description: 'Lambda Layer for kubectl, helm, and git tools'
      Content:
        S3Bucket: !Ref LayerS3Bucket 
        S3Key: !Ref LayerS3Key
      CompatibleArchitectures:
        - x86_64
      CompatibleRuntimes:
        - python3.9
        - python3.10
        - python3.11
        - python3.12

# Lambda Function 
  HelmCustomResourceFunction:
    Type: AWS::Lambda::Function
    Condition: InstallHelm
    DependsOn: 
      - HelmCustomResourceAccessEntry
    Properties:
      FunctionName: helm-chart-installer
      Environment: 
        Variables:
          CLUSTER_NAME: !If
            - CreateEKSCluster
            - !Ref EKSCluster
            - !Ref EKSClusterName
          PATH: '/opt/python/bin:/var/lang/bin:/usr/local/bin:/usr/bin/:/bin'
          GIT_EXEC_PATH: '/opt/python/libexec/git-core'
          KUBECONFIG: '/tmp/.kube/config'
          GITHUB_REPO_URL: !Ref HelmRepoUrl
          CHART_PATH: !Ref HelmRepoPath
          RELEASE_NAME: !Ref HelmRelease
          LD_LIBRARY_PATH: '/opt/python/lib'
      Handler: lambda_function.lambda_handler
      Role: !GetAtt HelmCustomResourceRole.Arn
      Runtime: python3.12
      Timeout: 600
      Code: 
        S3Bucket: !Ref FunctionS3Bucket
        S3Key: !Ref FunctionS3Key
      Layers: 
        - !Ref HelmCustomResourceLayer

# Custom Resource 
  HelmCustomResource:
    Type: AWS::CloudFormation::CustomResource
    Condition: InstallHelm
    Properties: 
      ServiceToken: !GetAtt HelmCustomResourceFunction.Arn

### ---------------- SageMaker HyperPod Cluster ----------------###
  HyperPodCluster:
    Type: AWS::SageMaker::Cluster
    Condition: CreateHyperPodCluster
    DependsOn: HelmCustomResource
    Properties:
      ClusterName: !Ref HyperPodClusterName
      InstanceGroups: 
        - InstanceGroupName: !Ref AcceleratedInstanceGroupName
          ExecutionRole: !GetAtt ExecutionRole.Arn
          InstanceType: !Ref AcceleratedInstanceType
          InstanceCount: !Ref AcceleratedInstanceCount
          ThreadsPerCore: !Ref AcceleratedThreadsPerCore
          InstanceStorageConfigs: 
            - EbsVolumeConfig: 
                VolumeSizeInGB: !Ref AcceleratedEBSVolumeSize
          LifeCycleConfig: 
            OnCreate: !Ref AcceleratedLifeCycleConfigOnCreate
            SourceS3Uri: !Sub 's3://${Bucket}'
          OnStartDeepHealthChecks: !Split 
            - "," 
            - !Join
              - ","
              - !Ref AcceleratedOnStartDeepHealthChecks
        - InstanceGroupName: !Ref GeneralPurposeInstanceGroupName
          ExecutionRole: !GetAtt ExecutionRole.Arn
          InstanceType: !Ref GeneralPurposeInstanceType
          InstanceCount: !Ref GeneralPurposeInstanceCount
          ThreadsPerCore: !Ref GeneralPurposeThreadsPerCore
          InstanceStorageConfigs: 
            - EbsVolumeConfig: 
                VolumeSizeInGB: !Ref GeneralPurposeEBSVolumeSize
          LifeCycleConfig: 
            OnCreate: !Ref GeneralPurposeLifeCycleConfigOnCreate
            SourceS3Uri: !Sub 's3://${Bucket}'
      NodeRecovery: !Ref NodeRecovery
      Orchestrator: 
        Eks:
          ClusterArn: !If
            - CreateEKSCluster
            - !GetAtt EKSCluster.Arn
            - !Sub 'arn:aws:eks:${AWS::Region}:${AWS::AccountId}:cluster/${EKSClusterName}'
      VpcConfig: 
        SecurityGroupIds:
          - !Ref NoIngressSecurityGroup
        Subnets:
          - !Ref PrivateSubnet1

### ---------------- Outputs ----------------###
Outputs:
  VPC:
    Condition: EKSOrSubnet
    Description: A reference to the created VPC
    Value: !If 
      - CreateEKSCluster
      - !Ref VPC
      - !Ref VpcId

  PublicSubnet1:
    Condition: CreateEKSCluster
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet1

  PublicSubnet2:
    Condition: CreateEKSCluster
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref PublicSubnet2

  PrivateSubnet1:
    Condition: EKSOrSubnet 
    Description: A reference to the private subnet used for HyperPod ENIs 
    Value: !Ref PrivateSubnet1

  EKSPrivateSubnet1:
    Condition: CreateEKSCluster
    Description: A reference to the EKS cluster private subnet in the 1st Availability Zone
    Value: !Ref EKSPrivateSubnet1
  
  EKSPrivateSubnet2:
    Condition: CreateEKSCluster
    Description: A reference to the EKS cluster private subnet in the 2nd Availability Zone
    Value: !Ref EKSPrivateSubnet2

  NoIngressSecurityGroup:
    Condition: EKSOrSubnet 
    Description: Security group with no ingress rule
    Value: !Ref NoIngressSecurityGroup

  ClusterArn:
    Condition: CreateEKSCluster
    Description: The ARN of the EKS cluster
    Value: !GetAtt EKSCluster.Arn

  ClusterName:
    Condition: CreateEKSCluster
    Description: The name of the EKS cluster
    Value: !Ref EKSCluster

  AmazonSagemakerClusterExecutionRoleArn:
    Description: 'Execution Role Arn'
    Value: !GetAtt ExecutionRole.Arn

  AmazonS3BucketName:
    Description: 'Bucket Name'
    Value: !Ref Bucket
